--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -24,7 +24,8 @@
 
     footer {
         align-self: stretch;
-        &.empty {
+
+        &.empty .progress{
             opacity: 0.5;
         }
     }
@@ -109,6 +110,8 @@
 
         &:disabled {
             cursor: default;
+            opacity: 0.5;
+
         }
 
         &:hover:not(:disabled) {
